2011-07-24  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-make-thread-query): Quote message-ids for gmail.

2011-07-23  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): New function to make an nnir group
	based on a thread query.

	* gnus-sum.el (gnus-refer-thread-use-nnir): New variable to control use
	of nnir in thread referral.
	(gnus-summary-refer-thread): Use it.

	* nnimap.el (nnimap-request-thread): Use it.

2011-07-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-comment): Ignore HTML comments.

2011-07-20  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (gnus-group-make-nnir-group): Allow optional search query
	argument.

	(gnus-group-make-nnir-group,nnir-request-group,nnir-run-query): Use
	`nnir-address' to handle server info rather than passing an arg.

	* nnimap.el (nnimap-make-thread-query): New utility function to format
	an imap thread search query.
	(nnimap-request-thread): Use it.

	* gnus-sum.el (gnus-handle-ephemeral-exit): Ensure we are setting the
	right select-method if we are not going back to the group buffer.

2011-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-read-ephemeral-group): Make sure we don't
	enter invalid buffer configurations into the quit form (bug#9107).
	(gnus-group-tool-bar-gnome): Replace connect/disconnect with
	unplugged/plugged.

	* gnus-sum.el (gnus-summary-refer-thread): When inserting new headers,
	keep track of which ones are unread (bug#9061).

	* gnus.el (gnus-refer-article-method): Allow entering any sexp
	(bug#9055).

	* gnus-art.el (gnus-article-show-images): Allow working if using w3m
	(bug#9041).

	* gnus-html.el (mm-util): Require (bug#9073).

	* gnus-sum.el (gnus-delete-duplicate-headers): New function.
	(gnus-summary-refer-thread): Use it to remove duplicates in the
	un-threaded view (bug#9053).
	(gnus-summary-insert-subject): Document USE-OLD-HEADER (bug#9070).

2011-07-07  Kan-Ru Chen  <kanru@kanru.info>
